# TT--FastAPI--File-Metadata-Parser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
_readme/: Diagram.drawio
src/: main.py
src/core/: config.py  dependencies.py  exceptions.py
src/database/: app.py  models.py
src/routers/: __init__.py  suip_data.py
src/services/: database.py  storage.py  suip_data.py
